--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,31 @@
-# Python bytecode
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Distribution / packaging
-dist/
-build/
-*.egg-info/
-
-# Virtual environments
-venv/
-env/
-ENV/
+# Node modules
+node_modules/
 
 # Environment variables
 .env
 
-# IDE files
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build directory
+dist/
+
+# Coverage directory
+coverage/
+
+# IDE specific files
 .idea/
 .vscode/
-*.swp
-*.swo
+*.sublime-workspace
+*.sublime-project
 
 # OS specific files
 .DS_Store
 Thumbs.db
 
-# Logs
-logs/
-*.log
-
-# Local development settings
-.local/
-
-# SQLite database files
-*.db
-*.sqlite3 
+# Prisma migrations
+# prisma/migrations/ 
