--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "Mental health application with traffic light system",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "migrate": "prisma migrate dev",
-    "seed": "ts-node prisma/seed.ts"
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:migrate": "ts-node src/db/migrate.ts",
+    "db:seed": "ts-node src/db/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "openai": "^4.24.0",
+    "pg": "^8.11.3",
     "socket.io": "^4.7.2",
     "zod": "^3.22.4"
   },
@@ -29,7 +32,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.4",
-    "prisma": "^5.7.0",
+    "@types/pg": "^8.10.9",
+    "drizzle-kit": "^0.20.14",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
