--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,10 @@
-version: '3.8'
-
 services:
   app:
     build: .
     ports:
       - "3000:3000"
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/mental_health_app
+      - DATABASE_URL=postgresql://postgres:Ho2025@host.docker.internal:5432/mental_health_app
       - JWT_SECRET=your-secret-key-change-in-production
       - OPENAI_API_KEY=your-openai-api-key
-      - PORT=3000
-
-  db:
-    image: postgres:14
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=mental_health_app
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-
-volumes:
-  postgres_data: 
+      - PORT=3000 
