feat: chat con ollama -> modelo Qwen. Listo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,44 @@ services:
       - DATABASE_URL=postgresql://postgres:Ho2025@host.docker.internal:5432/mental_health_app
       - JWT_SECRET=your-secret-key-change-in-production
       - OPENAI_API_KEY=your-openai-api-key
-      - PORT=3000 
+      - OLLAMA_API_URL=http://ollama:11434
+      - OLLAMA_MODEL=qwen2.5:0.5b
+      - USE_OLLAMA=true
+      - PORT=3000
+    depends_on:
+      - ollama
+    networks:
+      - app-network
+
+  ollama:
+    image: ollama/ollama:latest
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    environment:
+      - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_ORIGINS=*
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  # Servicio para inicializar Ollama con el modelo
+  ollama-init:
+    image: curlimages/curl:latest
+    depends_on:
+      - ollama
+    volumes:
+      - ./scripts/init-ollama.sh:/init-ollama.sh:ro
+    command: ["sh", "/init-ollama.sh"]
+    networks:
+      - app-network
+    restart: "no"
+
+volumes:
+  ollama_data:
+    driver: local
+
+networks:
+  app-network:
+    driver: bridge 
