feat: reestructuracion bbdd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,51 @@
 services:
+  # Base de datos PostgreSQL
+  postgres:
+    image: postgres:14-alpine
+    environment:
+      POSTGRES_DB: ${DB_NAME:-mental_health_app}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-passw}
+    ports:
+      - "${DB_PORT:-5432}:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-mental_health_app}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
   app:
     build: .
     ports:
-      - "3000:3000"
+      - "${PORT:-3000}:${PORT:-3000}"
     environment:
-      - DATABASE_URL=postgresql://postgres:Ho2025@host.docker.internal:5432/mental_health_app
-      - JWT_SECRET=your-secret-key-change-in-production
-      - OPENAI_API_KEY=your-openai-api-key
+      # Database configuration
+      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-passw}@postgres:5432/${DB_NAME:-mental_health_app}
+      
+      # Application configuration
+      - JWT_SECRET=${JWT_SECRET:-your-secret-key-change-in-production}
+      - PORT=${PORT:-3000}
+      - NODE_ENV=${NODE_ENV:-production}
+      
+      # AI Services configuration
       - OLLAMA_API_URL=http://ollama:11434
-      - OLLAMA_MODEL=qwen2.5:0.5b
-      - USE_OLLAMA=true
-      - PORT=3000
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen2.5:0.5b}
     depends_on:
-      - ollama
+      postgres:
+        condition: service_healthy
+      ollama:
+        condition: service_started
+      ollama-init:
+        condition: service_completed_successfully
     networks:
       - app-network
+    restart: unless-stopped
 
   ollama:
     image: ollama/ollama:latest
@@ -42,6 +73,8 @@ services:
     restart: "no"
 
 volumes:
+  postgres_data:
+    driver: local
   ollama_data:
     driver: local
 
